# upi

./: .gitignore  LICENSE  Program.cs  UPI.csproj  package-lock.json
.github/workflows/: release.yml
src/Adapters/: IEngineAdapter.cs  NodeAdapter.cs  PythonAdapter.cs
src/core/: Bootstrapper.cs  Downloader.cs  EnginePolicy.cs  EngineResolver.cs  NodeInstaller.cs  NodeReleaseResolver.cs  PathHelper.cs  PlatformHelper.cs  ProcessRunner.cs  PythonInstaller.cs  PythonReleaseResolver.cs  TarExtractor.cs  UpiPaths.cs  ZipExtractor.cs
wrappers/npm/: README.md  package.json
wrappers/npm/scripts/: install.js
wrappers/pip/: README.md  pyproject.toml
wrappers/pip/src/upi/: cli.py  installer.py
wrappers/pip/src/upi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
